tests/baselines/reference/extendsUntypedModule.symbols
=== /a.ts ===
import Foo from "foo";
>Foo : Symbol(Foo, Decl(a.ts, 0, 6))

import Bar from "bar"; // error: unused
>Bar : Symbol(Bar, Decl(a.ts, 1, 6))

export class A extends Foo { }
>A : Symbol(A, Decl(a.ts, 1, 22))
>Foo : Symbol(Foo, Decl(a.ts, 0, 6))

